<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home_id"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/make_id"
            android:icon="@drawable/baseline_add_shopping_cart_black_24dp"
            android:title="@string/make_order" />

        <item
            android:id="@+id/show_id"
            android:icon="@drawable/baseline_slideshow_black_24dp"
            android:title="@string/show_orders" />

        <item
            android:id="@+id/edit_id"
            android:icon="@drawable/baseline_note_add_black_24dp"
            android:title="@string/edit_order" />

        <item
            android:id="@+id/email_id"
            android:icon="@drawable/email"
            android:title="Send Email" />

        <item
            android:id="@+id/show_map_id"
            android:icon="@drawable/baseline_person_pin_circle_black_24dp"
            android:title="@string/show_map" />

        <item
            android:id="@+id/history_id"
            android:icon="@drawable/baseline_history_black_24dp"
            android:title="History" />

        <item
            android:id="@+id/logOut_id"
            android:icon="@drawable/baseline_power_settings_new_black_24dp"
            android:title="@string/log_out" />

        <item
            android:id="@+id/delete_account_id"
            android:icon="@drawable/baseline_delete_forever_black_24dp"
            android:title="@string/delete_account" />
    </group>

    <item android:title="@string/products_categories">
        <menu>
            <item
                android:id="@+id/apple_cat"
                android:title="@string/apple" />

            <item
                android:id="@+id/innovative_cat"
                android:title="@string/innovative" />

            <item
                android:id="@+id/kitchen_cat"
                android:title="@string/kitchen" />

            <item
                android:id="@+id/laptop_cat"
                android:title="@string/laptops" />

            <item
                android:id="@+id/leather_cat"
                android:title="@string/leather" />

            <item
                android:id="@+id/makeup_cat"
                android:title="@string/makeup" />

            <item
                android:id="@+id/supplement_cat"
                android:title="@string/supplements" />
        </menu>
    </item>

</menu>