<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".SignUp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_bg"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        tools:layout_editor_absoluteY="473dp" />

    <EditText
        android:id="@+id/tv_secret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_job"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/tell_me_a_secret"
        android:inputType="textPersonName"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/ed_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed_userName"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed_email"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/ed_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_password"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/enter_your_job"
        android:inputType="textPersonName"
        android:textColor="#fff" />



    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="216dp"
        android:layout_height="34dp"
        android:layout_below="@+id/tv_secret"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:entries="@array/gender"
        android:layout_alignRight="@+id/ed_job" />

    <TextView
        android:id="@+id/birthDate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Birth date"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/gender_spinner"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="132dp"
        android:layout_height="149dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/web_hi_res_512"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/tv_BirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="#fff"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/btn_not_a_robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_SignUp"
        android:layout_alignStart="@+id/btn_SignUp"
        android:text="I am not a Robot"
        android:layout_marginBottom="1dp"
        android:layout_alignLeft="@+id/btn_SignUp" />

</RelativeLayout>