<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    >


    <EditText
        android:id="@+id/ed_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_action_search"
        android:ems="10"
        android:hint="@string/search"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorPrimary"
        android:inputType="textPersonName"
        android:layout_alignParentLeft="true" />

    <ListView
        android:id="@+id/lv_productsList_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tv_totalPrice"
        android:layout_marginTop="6dp"/>

    <Button
        android:id="@+id/btn_Buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Buy" />

    <TextView
        android:id="@+id/tv_totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_search"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="11dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:text="@string/total_price_goes_here"
        android:textAlignment="center" />

</RelativeLayout>